--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,7 @@ jobs:
       - run:
           name: Test Terraform
           command: |
-            make integration-test
+            make integration_test
   test_handler:
     docker:
       - image: circleci/golang:latest
